--- a/app/.travis.yml
+++ b/app/.travis.yml
@@ -1,12 +1,13 @@
 language: python
 python:
- - 3.6
 
+  - "3.5.0"
+# command to install dependencies
 install:
- - pip install -r requirements.txt
-
- script:
-  - pytest tests -- cov=app 
-
-  after_success:
- - coveralls
+  - pip install -r requirements.txt
+# command to run tests
+script: 
+- pytest --cov=.
+- coverage
+after_success:
+- coveralls
