--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,13 @@
 language: python
-python:
 
-  - "3.5.0"
-# command to install dependencies
+python: 
+  - "3.6"
+  
 install:
   - pip install -r requirements.txt
-# command to run tests
-script: 
-- pytest --cov=.
-- coverage
+
+script:
+  - python -m pytest --cov
+  
 after_success:
-- coveralls
+  - coveralls
