--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,47 @@
-astroid==2.1.0
-atomicwrites==1.2.1
-attrs==18.2.0
-certifi==2018.10.15
-chardet==3.0.4
-Click==7.0
-colorama==0.4.0
-coverage==4.5.2
-coveralls==1.5.1
-docopt==0.6.2
+asn1crypto==0.24.0
+astroid==1.6.5
+autopep8==1.3.5
+backports.functools-lru-cache==1.5
+click==6.7
+colorama==0.3.9
+configparser==3.5.0
+coverage==4.5.1
+cryptography==2.1.4
+enum34==1.1.6
 Flask==1.0.2
-idna==2.5
+Flask-Cors==3.0.6
+funcsigs==1.0.2
+futures==3.2.0
+gunicorn==19.9.0
+idna==2.6
+ipaddress==1.0.17
 isort==4.3.4
-itsdangerous==1.1.0
+itsdangerous==0.24
 Jinja2==2.10
+keyring==10.6.0
+keyrings.alt==3.0
 lazy-object-proxy==1.3.1
-MarkupSafe==1.1.0
+MarkupSafe==1.0
 mccabe==0.6.1
-more-itertools==4.3.0
-newsapi==0.1.1
-newsapi-python==0.2.3
-pipenv==2018.11.26
-pluggy==0.8.0
-py==1.7.0
-pylint==2.2.2
-pytest==4.0.1
-pytest-cov==2.6.1
-requests==2.17.1
+mock==2.0.0
+nose==1.3.7
+nose2==0.7.4
+parse==1.8.4
+passlib==1.7.1
+pbr==4.3.0
+psycopg2==2.7.5
+psycopg2-binary==2.7.5
+pycodestyle==2.4.0
+pycrypto==2.6.1
+pygobject==3.26.1
+PyJWT==1.6.4
+pylint==1.9.3
+python-dotenv==0.8.2
+pyxdg==0.25
+SecretStorage==2.3.1
+singledispatch==3.4.0.3
 six==1.11.0
-urllib3==1.21.1
-virtualenv==16.1.0
-virtualenv-clone==0.4.0
+urllib3==1.23
+virtualenv==16.0.0
 Werkzeug==0.14.1
 wrapt==1.10.11
