--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,11 @@ python:
   
 install:
   - pip install -r requirements.txt
+  - pip install coveralls
 
 script:
-  - python -m pytest --cov
+  - coverage run -m pytest
+  - coverage report
   
 after_success:
   - coveralls
